--- a/view/index.html
+++ b/view/index.html
@@ -26,22 +26,7 @@
 
 <body>
 	<style>			
-		#pstu img{
-		border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
-		width: 20rem;
-		height: 8rem;
-		margin: 1rem;
-		}
-		#pstu span{
-			font-family: "楷体";
-			font-weight: 600;
-			text-shadow: #761C19;
-			margin-left: 8rem;
-			font-size: 1.5rem;
-		}
-		.han{
-			line-height: 2rem;
-		}
+
 	</style>
 
 <!--====================================================
@@ -94,29 +79,12 @@
             <!-- Sidebar Navidation Menus-->
             <ul class="list-unstyled">
                 <li class="active"> <a href="index.html"><i class="icon-search"></i>搜索引擎</a></li>
-                <li><a href="#apps" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>知识收纳</a>
-                    <ul id="apps" class="collapse list-unstyled">
-                        <li><a href="calendar.html">技嘉/B450M DS3H</a></li>
-                        <li><a href="email.html">技嘉/A320M-S2H</a></li>
-                        <li><a href="media.html">华硕/猛禽B450-F</a></li>
-                        <li><a href="invoice.html">华硕/猛禽Z390-I</a></li>
-                    </ul>
-                </li>
-                <li><a href="#pages" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-file-o"></i>CSS </a>
-                    <ul id="pages" class="collapse list-unstyled">
-                        <li><a href="faq.html">Intel 酷睿i5 9400F</a></li>
-                        <li><a href="gallery.html">Intel 酷睿i5 8400</a></li>
-                        <li><a href="empty.html">AMD 锐龙 5 2600X</a></li>
-                    </ul>
-                </li>
-                <li><a href="#elements" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-globe"></i>装机知识</a>
-                    <ul id="elements" class="collapse list-unstyled">
-                        <li><a href="ui-buttons.html">Buttons</a></li> 
-
-                    </ul>
-                </li>
+                <li><a href="calendar.html"><i class="icon-interface-windows"></i>图片素材</a></li>            
+                <li><a href="faq.html"> <i class="fa fa-file-o"></i>编程汇集</a></li>
+                <li><a href="ui-buttons.html"> <i class="fa fa-globe"></i>其他</a></li>
             </ul>
-        </nav>
+    
+		</nav>
         <div id="pstu" class="content-inner baijin">
             <div class="row han">
 			  <div class="col-md-4">
@@ -194,6 +162,25 @@
 				  </div>
 			</div>
 
+
+
+		    <div class="row han">
+				  <div class="col-md-4">
+					<a target="_blank" href="http://www.9178.work"><img src="img/soso/woke.png" />
+					<span>沃克导航</span></a>
+				 
+				  </div>
+				  <div class="col-md-4">
+					   <a target="_blank" href="https://scholar.chongbuluo.com/"><img src="img/soso/xuesu.png" />
+					   <span>学术搜索</span></a>
+				  </div>
+<!-- 				  <div class="col-md-4">
+					   <a target="_blank" href="http://thestocks.im"><img src="img/soso/thestocks.png" />
+					   <span>图片资源</span></a>
+				  </div> -->
+			</div>
+			
+			
             </div>
 
             <!--***** FOOTER *****-->
