--- a/view/css/style.css
+++ b/view/css/style.css
@@ -398,4 +398,19 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-
+		#pstu img{
+		border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
+		width: 20rem;
+		height: 8rem;
+		margin: 1rem;
+		}
+		#pstu span{
+			font-family: "楷体";
+			font-weight: 600;
+			text-shadow: #761C19;
+			margin-left: 8rem;
+			font-size: 1.5rem;
+		}
+		.han{
+			line-height: 2rem;
+		}
