--- a/view/faq.html
+++ b/view/faq.html
@@ -70,101 +70,100 @@
         <div class="sidebar-header d-flex align-items-center">
             <div class="avatar"><img src="img/avatar-1.jpg" alt="..." class="img-fluid rounded-circle"></div>
             <div class="title">
-                <h1 class="h4">小咸笔记</h1>
+                <h1 class="h4">土琪色咸鸭蛋</h1>
             </div>
         </div>
         <hr>
         <!-- Sidebar Navidation Menus-->
-        <ul class="list-unstyled">
-            <li class="active"> <a href="index.html"><i class="icon-home"></i>首页</a></li>
-            <li><a href="#apps" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>主板</a>
-                <ul id="apps" class="collapse list-unstyled">
-                    <li><a href="calendar.html">技嘉/B450M DS3H</a></li>
-                    <li><a href="email.html">技嘉/A320M-S2H</a></li>
-                    <li><a href="media.html">华硕/猛禽B450-F</a></li>
-                    <li><a href="invoice.html">华硕/猛禽Z390-I</a></li>
-                </ul>
-            </li>
-            <li><a href="#pages" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-file-o"></i>CPU </a>
-                <ul id="pages" class="collapse list-unstyled">
-                    <li><a href="faq.html">Intel 酷睿i5 9400F</a></li>
-                    <li><a href="gallery.html">Intel 酷睿i5 8400</a></li>
-                    <li><a href="empty.html">AMD 锐龙 5 2600X</a></li>
+            <ul class="list-unstyled">
+                <li> <a href="index.html"><i class="icon-search"></i>搜索引擎</a></li>
+                <li><a href="calendar.html"><i class="icon-interface-windows"></i>图片素材</a></li>            
+                <li class="active"><a href="faq.html"> <i class="fa fa-file-o"></i>编程汇集</a></li>
+                <li><a href="ui-buttons.html"> <i class="fa fa-globe"></i>其他</a></li>
+            </ul>
+	</nav>
+        <div id="pstu" class="content-inner baijin">
+            <div class="row han">
+			  <div class="col-md-4">
+			  <a target="_blank" href="https://tool.lu"><img src="img/bianchen/zxgj.png"/>
+			  <span>站长工具</span> </a>		  
+			  </div>
+			  <div class="col-md-4">
+				   <a target="_blank" href="http://code.giffox.com"><img src="img/bianchen/dmdh.png" />
+				    <span>代码导航</span></a>
+			  </div>
+			  <div class="col-md-4">
+				  <a target="_blank" href="https://www.runoob.com/"><img src="img/bianchen/cnkc.png" />
+				  <span>菜鸟课程</span></a>
+				  
+			  </div>
+			</div>	
+           <div class="row han">
+			  <div class="col-md-4">
+			  <a target="_blank" href="https://www.csdn.net"><img src="img/bianchen/csdn.png"/>
+			  <span>CSDN</span></a>
+			  </div>
+			  <div class="col-md-4">
+				   <a target="_blank" href="https://segmentfault.com"><img src="img/bianchen/sfzhis.png" />
+				   <span>思否搜索</span></a>
+			  </div>
+			  <div class="col-md-4">
+				  <a target="_blank" href="http://www.w3school.com.cn/"><img src="img/bianchen/w3c.png" />
+				  <span>w3school</span></a>
+				   
+			  </div>
+			</div>
 
-                    <li><a href="register.html">AMD Ryzen 7 2700</a></li>
-                    <li><a href="search-result.html">AMD Ryzen 3 2200G</a></li>
-                    <li><a href="ui-progressbars.html">AMD A8-9600</a></li>
-                    <li><a href="ui-timeline.html">AMD A8-7680</a></li>
-                    <li><a href="ui-cards.html">AMD A6-7480</a></li>
-                </ul>
-            </li>
-            <li><a href="#elements" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-globe"></i>装机知识</a>
-                <ul id="elements" class="collapse list-unstyled">
-                    <li><a href="ui-buttons.html">Buttons</a></li>
+		    <div class="row han">
+				  <div class="col-md-4">
+					   <a target="_blank" href="http://www.jq22.com/"><img src="img/bianchen/jquery.png" />
+					   <span>JQuery插件</span></a>
+				  </div>
+				  <div class="col-md-4">
+					   <a target="_blank" href="https://echarts.baidu.com/"><img src="img/bianchen/tubiao.png" />
+					   <span>图表插件</span></a>
+				  </div>
+				  <div class="col-md-4">
+					   <a target="_blank" href="http://www.dcloud.io/"><img src="img/bianchen/mui.png" />
+					   <span>MUI</span></a>
+				  </div>
+			</div>
 
+           <div class="row han">
+			  <div class="col-md-4">
+			  <a target="_blank" href="https://www.bootcss.com/"><img src="img/bianchen/bootcss.png"/>
+			  <span>Bootstrap</span></a>
+			  </div>
+			  <div class="col-md-4">
+				   <a target="_blank" href="http://www.ionic.wang/"><img src="img/bianchen/ionic.png" />
+				   <span>ionic</span></a>
+			  </div>
+			  <div class="col-md-4">
+				  <a target="_blank" href="http://www.ionic.wang/"><img src="img/bianchen/vue.png" />
+				  <span>vue</span></a>
+				  
+			  </div>
+			</div>
+		    <div class="row han">
+				  <div class="col-md-4">
+					<a target="_blank" href="http://www.hejizhan.com"><img src="img/soso/hejizhan.png" />
+					<span>知识外链</span></a>
+				 
+				  </div>
+				  <div class="col-md-4">
+					   <a target="_blank" href="https://search.chongbuluo.com"><img src="img/soso/chong.png" />
+					   <span>虫部落搜</span></a>
+				  </div>
+				  <div class="col-md-4">
+					   <a target="_blank" href="http://thestocks.im"><img src="img/soso/thestocks.png" />
+					   <span>图片资源</span></a>
+				  </div>
+			</div>
 
-                </ul>
-            </li>
-        </ul>
-    </nav>
-
-        <div class="content-inner chart-cont">
-
-            <div class="section-bottom "style="margin-left: 2rem;color: #000">
-                <div id="xinxi1">
-                    <div class="row"  style="width: 100%;">
-                        <div class="col-12" style="border-bottom: 2px solid rebeccapurple;"><h2>Intel 酷睿i5 9400F</h2></div>
-
-                        <div class="col-md-6 xxi">
-                            <h3>一.基本参数</h3>
-                            <ui>
-                                <li>CPU系列____酷睿i5 9代系列</li>
-                                <li>制作工艺____14纳米</li>
-                                <li>核心代号____Coffee Lake</li>
-                                <li>插槽类型____LGA 1151</li>
-                            </ui>
-                            <h3>二.性能参数</h3>
-                            <ui>
-                                <li>CPU主频____2.9GHz</li>
-                                <li>动态加速频率____4.1GHz</li>
-                                <li>核心数量____六核心</li>
-                                <li>线程数量____六线程</li>
-
-                                <li>二级缓存____1.5MB</li>
-                                <li>三级缓存____9MB</li>
-                                <li>总线规格____DMI3 8GT/s</li>
-                                <li>热设计功耗(TDP)____65W</li>
-                            </ui>
-                            <h3>三.内存参数</h3>
-                            <ui>
-                                <li>支持最大内存____64GB</li>
-                                <li>内存类型____DDR4 2666/2400/2133MHz</li>
-                                <li>内存描述____1/最大内存通道数：2。2/最大内存带宽：41.6GB/s。3/ECC内存支持：否 </li>
-                            </ui>
-                            <h3>四.显卡参数</h3>
-                            <ui>
-                                <li>集成显卡____不支持</li>
-                            </ui>
-
-                        </div>
-                        <div class="col-md-6 xxi">
-
-                            <h3>五.技术参数</h3>
-                            <ui>
-                                <li>超线程技术____支持</li>
-                                <li>虚拟化技术____Intel VT-x</li>
-                                <li>指令集____SSE4.1/4.2，AVX2，64bit</li>
-                                <li>64位处理器____是</li>
-                                <li>其它技术____增强型SpeedStep技术</li>
-                            </ui>
-                            <h3 style="color: red;">￥：1200元/左右</h3>
-                        </div>
-                    </div>
-                </div>
             </div>
 
-        </div>
-    </div> 
+
+</div> 
 
     <!--Global Javascript -->
     <script src="js/jquery.min.js"></script>
@@ -178,74 +177,6 @@
     <script src="js/front.js"></script> 
     
     <!--Core Javascript -->
-    <script>
-        new Chart(document.getElementById("myChart-nav").getContext('2d'), {
-          type: 'doughnut',
-          data: {
-            labels: ["M", "T", "W", "T", "F", "S", "S"],
-            datasets: [{
-              backgroundColor: [
-                "#2ecc71",
-                "#3498db",
-                "#95a5a6",
-                "#9b59b6",
-                "#f1c40f",
-                "#e74c3c",
-                "#34495e"
-              ],
-              data: [12, 19, 3, 17, 28, 24, 7]
-            }]
-          },
-          options: {
-              legend: { display: false },
-              title: {
-                display: true,
-                text: ''
-               } 
-            }
-        });
-    </script>
-    <script>
-        (function($) {
-            
-            var mn = $(".vert-tab");
-            mns = "vert-tab-scrolled";
-            $(window).scroll(function() {
-                if ($(this).scrollTop() > $('header').height()) {
-                    mn.addClass(mns);
-                } else {
-                    mn.removeClass(mns);
-                }
-            });
-
-            "use strict";
-            $('a.js-scroll-trigger[href*="#"]:not([href="#"])').click(function() {
-              if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) 
-              {
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                if (target.length) {
-                  $('html, body').animate({
-                    scrollTop: (target.offset().top - 22)
-                  }, 700, "easeInOutExpo");
-                  return false;
-                }
-              }
-            });
-
-            $('.collapse').on('show.bs.collapse', function() {
-                var id = $(this).attr('id');
-                $('a[href="#' + id + '"]').closest('.panel-heading').addClass('active-faq');
-                $('a[href="#' + id + '"] .panel-title span').html('<i class="fa fa-minus"></i>');
-            });
-            $('.collapse').on('hide.bs.collapse', function() {
-                var id = $(this).attr('id');
-                $('a[href="#' + id + '"]').closest('.panel-heading').removeClass('active-faq');
-                $('a[href="#' + id + '"] .panel-title span').html('<i class="fa fa-plus"></i>');
-            });
-
-        })(jQuery);  
-    </script>
 </body>
 
 </html>
