--- a/view/ui-buttons.html
+++ b/view/ui-buttons.html
@@ -71,43 +71,18 @@
         <div class="sidebar-header d-flex align-items-center">
             <div class="avatar"><img src="img/avatar-1.jpg" alt="..." class="img-fluid rounded-circle"></div>
             <div class="title">
-                <h1 class="h4">小咸笔记</h1>
+                <h1 class="h4">土琪色咸鸭蛋</h1>
             </div>
         </div>
         <hr>
         <!-- Sidebar Navidation Menus-->
-        <ul class="list-unstyled">
-            <li class="active"> <a href="index.html"><i class="icon-home"></i>首页</a></li>
-            <li><a href="#apps" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>主板</a>
-                <ul id="apps" class="collapse list-unstyled">
-                    <li><a href="calendar.html">技嘉/B450M DS3H</a></li>
-                    <li><a href="email.html">技嘉/A320M-S2H</a></li>
-                    <li><a href="media.html">华硕/猛禽B450-F</a></li>
-                    <li><a href="invoice.html">华硕/猛禽Z390-I</a></li>
-                </ul>
-            </li>
-            <li><a href="#pages" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-file-o"></i>CPU </a>
-                <ul id="pages" class="collapse list-unstyled">
-                    <li><a href="faq.html">Intel 酷睿i5 9400F</a></li>
-                    <li><a href="gallery.html">Intel 酷睿i5 8400</a></li>
-                    <li><a href="empty.html">AMD 锐龙 5 2600X</a></li>
-
-                    <li><a href="register.html">AMD Ryzen 7 2700</a></li>
-                    <li><a href="search-result.html">AMD Ryzen 3 2200G</a></li>
-                    <li><a href="ui-progressbars.html">AMD A8-9600</a></li>
-                    <li><a href="ui-timeline.html">AMD A8-7680</a></li>
-                    <li><a href="ui-timeline.html">AMD A6-7480</a></li>
-                </ul>
-            </li>
-            <li><a href="#elements" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-globe"></i>装机知识</a>
-                <ul id="elements" class="collapse list-unstyled">
-                    <li><a href="ui-buttons.html">Buttons</a></li>
-                    <li><a href="ui-cards.html">Cards</a></li>
-
-                </ul>
-            </li>
-        </ul>
-    </nav>
+            <ul class="list-unstyled">
+                <li> <a href="index.html"><i class="icon-search"></i>搜索引擎</a></li>
+                <li><a href="calendar.html"><i class="icon-interface-windows"></i>图片素材</a></li>            
+                <li><a href="faq.html"> <i class="fa fa-file-o"></i>编程汇集</a></li>
+                <li class="active"><a href="ui-buttons.html"> <i class="fa fa-globe"></i>其他</a></li>
+            </ul>
+	</nav>
 
         <div class="content-inner chart-cont">
 
