--- a/view/faq.html
+++ b/view/faq.html
@@ -98,7 +98,7 @@
 				  
 			  </div>
 			</div>	
-           <div class="row han">
+            <div class="row han">
 			  <div class="col-md-4">
 			  <a target="_blank" href="https://www.csdn.net"><img src="img/bianchen/csdn.png"/>
 			  <span>CSDN</span></a>
@@ -113,7 +113,6 @@
 				   
 			  </div>
 			</div>
-
 		    <div class="row han">
 				  <div class="col-md-4">
 					   <a target="_blank" href="http://www.jq22.com/"><img src="img/bianchen/jquery.png" />
@@ -128,8 +127,7 @@
 					   <span>MUI</span></a>
 				  </div>
 			</div>
-
-           <div class="row han">
+            <div class="row han">
 			  <div class="col-md-4">
 			  <a target="_blank" href="https://www.bootcss.com/"><img src="img/bianchen/bootcss.png"/>
 			  <span>Bootstrap</span></a>
@@ -146,21 +144,51 @@
 			</div>
 		    <div class="row han">
 				  <div class="col-md-4">
-					<a target="_blank" href="http://www.hejizhan.com"><img src="img/soso/hejizhan.png" />
-					<span>知识外链</span></a>
+					<a target="_blank" href="https://www.layui.com"><img src="img/bianchen/layui.png" />
+					<span>layui</span></a>
 				 
 				  </div>
 				  <div class="col-md-4">
-					   <a target="_blank" href="https://search.chongbuluo.com"><img src="img/soso/chong.png" />
-					   <span>虫部落搜</span></a>
+					   <a target="_blank" href="https://github.com"><img src="img/bianchen/github.png" />
+					   <span>GitHub</span></a>
 				  </div>
 				  <div class="col-md-4">
-					   <a target="_blank" href="http://thestocks.im"><img src="img/soso/thestocks.png" />
-					   <span>图片资源</span></a>
+					   <a target="_blank" href="https://www.cnblogs.com/"><img src="img/bianchen/boke.png" />
+					   <span>博客园</span></a>
 				  </div>
 			</div>
-
-            </div>
+			<div class="row han">
+     	  <div class="col-md-4">
+     		<a target="_blank" href="https://www.proginn.com"><img src="img/bianchen/cxykz.png" />
+     		<span>程序员客栈</span></a>
+     	 
+     	  </div>
+     	  <div class="col-md-4">
+     		   <a target="_blank" href="https://juejin.im"><img src="img/bianchen/juejing.png" />
+     		   <span>掘金网</span></a>
+     	  </div>
+     	  <div class="col-md-4">
+     		   <a target="_blank" href="https://www.lintcode.com"><img src="img/bianchen/suanfa.png" />
+     		   <span>领扣算法</span></a>
+     	  </div>
+     </div>
+			<div class="row han">
+     	  <div class="col-md-4">
+     		<a target="_blank" href="https://leetcode-cn.com/"><img src="img/bianchen/liko.png" />
+     		<span>力扣算法</span></a>
+     	 
+     	  </div>
+     	  <div class="col-md-4">
+     		   <a target="_blank" href="http://ife.baidu.com"><img src="img/bianchen/baiduqd.png" />
+     		   <span>百度前端学习</span></a>
+     	  </div>
+     	  <div class="col-md-4">
+     		   <a target="_blank" href="https://www.v2ex.com/"><img src="img/bianchen/jijie.png" />
+     		   <span>程序员集结地</span></a>
+     	  </div>
+     </div>     
+     
+			</div>
 
 
 </div> 
