--- a/view/ui-buttons.html
+++ b/view/ui-buttons.html
@@ -84,11 +84,20 @@
             </ul>
 	</nav>
 
-        <div class="content-inner chart-cont">
+         <div id="pstu" class="content-inner baijin">    
+         <div class="row han">
+    	  <div class="col-md-4">
+    		<a target="_blank" href="https://www.winos.me/"><img src="img/xitong/winos.png" />
+    		<span>win系统</span></a>
+    	 
+    	  </div>
+    	  <div class="col-md-4">
+    		   <a target="_blank" href="https://msdn.itellyou.cn"><img src="img/xitong/211.png" />
+    		   <span>纯净系统</span></a>
+    	  </div>
 
-            <!--***** CONTENT *****-->     
-    
-        </div>
+    </div>  
+       </div>
     </div> 
 
     <!--Global Javascript -->
